segundo commit com adição de mais algumas tecnologias e melhorias

--- a/index.html
+++ b/index.html
@@ -9,9 +9,52 @@
     <link rel="shortcut icon" href="assets/imagens/bulbassaro.svg" type="image/x-icon">
 </head>
 <body>
+     <section class="pokemon-hero">
+        <div class="hero bug">
+            <div class="area-hero">
+                <div class="hero-info">
+                    <div class="info">
+                        <div class="number">#001</div>
+                        <div class="name">Charizard</div>
+                    </div>
+                    <div class="types">Fire</div>
+                </div>
+                <img src="assets/imagens/bulbassaro.svg" alt="">
+            </div>
+
+            <div class="detalhes-hero">
+                <li>
+                    <a href="#">Details</a>
+                    <a href="#">Status</a>
+                    <a href="#">Evolutions</a>
+                </li>
+                <div class="detalhes-info">
+                    <div class="altura"><span>Height</span> 3.5</div>
+                    <div class="peso"><span>Peso</span> 1.5</div>
+                    <div class="categoria"><span>Categoria</span> Flame</div>
+                    <div class="altura"><span>Habilidade</span>Blaze</div>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. A at quam, eos consectetur voluptatibus harum facere tempora et perspiciatis delectus dignissimos repellendus minima non numquam id cupiditate est in doloribus.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <header class="cabecalho">
+        <nav>
+            <div class="area-logo">
+                <img src="assets/imagens/Pokemon-01.png" alt="">
+                <h1>Pokedex</h1>
+            </div>
+            <div class="barra-pesquisa">
+                <input type="search" value="" name="pesquisar" placeholder="Pesquise seu Pokemon">
+            </div>
+        </nav>
+    </header>
     <main class="area-pokemon">
-        <h1>Pokedex</h1>
-        <ol class="pokemons" id="listaPokemon"> 
+        <ol class="pokemons" id="listaPokemon">
+            
         </ol>
     </main>
 
