Alterações entre subMenus e detalhes de mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-
     <section class="pokemon-hero">
 
     </section>
@@ -21,9 +20,9 @@
                 <img src="assets/imagens/Pokemon-01.png" alt="">
                 <h1>Pokedex</h1>
             </div>
-            <div class="barra-pesquisa">
+            <!-- <div class="barra-pesquisa">
                 <input type="search" value="" name="pesquisar" placeholder="Pesquise seu Pokemon">
-            </div>
+            </div> -->
         </nav>
     </header>
 
